fixing liveblog showmore button alignment

--- a/common/app/assets/stylesheets/module/content/_live-blog.scss
+++ b/common/app/assets/stylesheets/module/content/_live-blog.scss
@@ -918,6 +918,7 @@ $timeline-width: 14px;
     background-color: colour(live-main-2);
     border: 0;
     margin-bottom: $gs-baseline;
+    padding-left: 36px;
 
     @include mq(leftCol) {
         margin-top: $gs-baseline;
@@ -932,6 +933,12 @@ $timeline-width: 14px;
     .i {
         width: 24px;
         height: 24px;
-        margin: 6px 5px 0 -5px;
+        vertical-align: middle;
+        margin: auto;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 7px;
+
     }
 }
